@@ -55,6 +55,7 @@ Bugs fixed
 - Bug 2028 - remove unnecessary Time to double conversions in Wifi models
 - Bug 2029 - new CQI generation approach fix
 - Bug 2030 - provide default values for WifiTxVector
+- Bug 2038 - Stop method does not stop next wave in WaveformGenerator
 
 Known issues
 ------------
